adjusted the positioning of things to fix the footer because it had a gap between it and the borders

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 /* general styling */ 
 body {
-    padding: 30px;
+    background-color: whitesmoke;
 }
+article {
+    padding: 50px;
+}
+
 h1, h2, h4 {
     font-family: 'Abril Fatface', cursive;
     font-size: 50px; 
@@ -85,6 +89,7 @@ nav a {
     padding: 20px; 
     margin-bottom: 50px;
     align-items: center; 
+    justify-content: center;
 
 }
 .angelika-picture {
@@ -150,6 +155,9 @@ nav a {
 footer {
     text-align: center;
     font-size: 15px !important; 
-    margin-top: 100px; 
+    margin: 100px 0px 0px 0px; 
     margin-bottom: 0px; 
+    padding: 10px;
+    background-color: lightgrey;
+    color:white;
 }
